	* config/epiphany/epiphany.md (isub_i+1): New peephole2.
	* config/epiphany/epiphany-protos.h (get_attr_sched_use_fpu): Declare.

	* config/epiphany/epiphany.h (EPIPHANY_LIBRARY_EXTRA_SPEC): Define.
	(EXTRA_SPECS, DRIVER_SELF_SPECS): Likewise.
	* config/epiphany/t-epiphany (SPECS): Set.
	(specs): New rule.

	* config/epiphany/epiphany.md (isub_i+1): Work around generator bug.

2012-11-28  Jakub Jelinek  <jakub@redhat.com>

	PR debug/36728
	PR debug/55467
	PR middle-end/55507
	PR bootstrap/55511
	* cselib.c (cselib_process_insn): If cselib_preserve_constants,
	don't reset table and exit early on volatile insns and setjmp.
	Reset table afterwards on setjmp.

2012-11-28  Andrew Pinski  <apinski@cavium.com>

	PR bootstrap/54279
	* Makefile.in (${QMTEST_DIR}/context): Use xg++ instead of g++.

2012-11-28  Richard Sandiford  <rdsandiford@googlemail.com>

	PR rtl-optimization/55052
	* simplify-rtx.c (simplify_subreg): Restore SCALAR_INT_MODE_P check.

2012-11-28  David Edelsohn  <dje.gcc@gmail.com>

	* target.def (use_blocks_for_decl_p): New hook.
	* varasm.c (use_blocks_for_decl_p): Apply hook as final condition.
	* doc/tm.texi.in (USE_BLOCKS_FOR_DECL_P): New description.
	* doc/tm.texi: Regenerated.
	
2012-11-28  Richard Sandiford  <rdsandiford@googlemail.com>

	PR middle-end/55438
	* expmed.c (simple_mem_bitfield_p): New function, extracted from
	store_bit_field_1 and extract_bit_field_1.  Use GET_MODE_ALIGNMENT
	rather than bitsize when checking the alignment.
	(store_bit_field_1, extract_bit_field_1): Call it.
	* stor-layout.c (bit_field_mode_iterator::bit_field_mode_iterator):
	Don't limit ALIGN_.  Assume that memory is mapped in chunks of at
	least word size, regardless of BIGGEST_ALIGNMENT.
	(bit_field_mode_iterator::get_mode): Use GET_MODE_ALIGNMENT rather
	than unit when checking the alignment.
	(get_best_mode): Use GET_MODE_ALIGNMENT.

2012-11-28  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/55512